...

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:weightSum="6">

            <ImageView android:id="@+id/Filter_arrow"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="3"
                       app:srcCompat="@drawable/down_white"/>


...
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="3">

                    <Spinner android:id="@+id/Subject_spinner"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             android:background="@drawable/rounded_edittext"/>
...
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="3">

                    <Spinner android:id="@+id/Grade_spinner"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             android:entries="@array/array_grades"
...

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <Button android:id="@+id/grade_go_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:text="@string/go"
                    android:textStyle="bold"
                    android:textColor="@color/primaryDarkColor"
...

    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/grade_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">


        </androidx.recyclerview.widget.RecyclerView>

    </ScrollView>
</LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/grade_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/primaryDarkColor"
            android:src="@android:drawable/ic_input_add"
...
