<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/primaryBackgroundYellow">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/add_new_grade"
              android:textSize="@dimen/mainSize"
              android:textStyle="bold"
              android:layout_gravity="center"/>

    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content"
                                       android:layout_margin="10dp" app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent"
                                                           android:orientation="vertical">


            <ImageView android:id="@+id/add_subject_icon"
                       android:layout_width="20dp" android:layout_height="20dp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       android:layout_margin="10dp"
                       app:srcCompat="@mipmap/subject"/>

            <TextView android:id="@+id/add_grade_subject_text"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toEndOf="@+id/add_subject_icon"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      android:text="@string/subject"
                      android:textSize="@dimen/mainSize"
                      android:textStyle="bold"
                      android:layout_margin="10dp"/>

            <Spinner
                    android:id="@+id/add_grade_subject_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/add_grade_subject_text"
                    app:layout_constraintTop_toBottomOf="@+id/add_grade_subject_text"
                    app:layout_constraintEnd_toEndOf="@+id/add_grade_subject_text"
                    android:layout_margin="10dp">

            </Spinner>

            <ImageView android:id="@+id/add_student_icon"
                       android:layout_width="20dp"
                       android:layout_height="20dp"
                       app:layout_constraintStart_toStartOf="@+id/add_subject_icon"
                       app:layout_constraintTop_toBottomOf="@+id/add_grade_subject_spinner"
                       android:layout_marginTop="10dp"
                       app:srcCompat="@drawable/student"/>

            <TextView android:id="@+id/add_grade_student_text"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toEndOf="@+id/add_student_icon"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toTopOf="@+id/add_student_icon"
                      app:layout_constraintBottom_toBottomOf="@+id/add_student_icon"
                      android:text="@string/student"
                      android:textSize="@dimen/mainSize"
                      android:textStyle="bold"
                      android:layout_margin="10dp"/>

            <Spinner
                    android:id="@+id/add_grade_student_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/add_grade_student_text"
                    app:layout_constraintTop_toBottomOf="@+id/add_grade_student_text"
                    app:layout_constraintEnd_toEndOf="@+id/add_grade_student_text"
                    android:layout_margin="10dp">

            </Spinner>

            <ImageView android:id="@+id/add_grade_icon"
                       android:layout_width="20dp"
                       android:layout_height="20dp"
                       android:layout_marginTop="10dp"
                       app:layout_constraintStart_toStartOf="@id/add_subject_icon"
                       app:layout_constraintTop_toBottomOf="@id/add_grade_student_spinner"
                       app:srcCompat="@drawable/grade"/>


            <TextView
                    android:id="@+id/add_grade_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/grade"
                    app:layout_constraintStart_toEndOf="@id/add_grade_icon"
                    app:layout_constraintTop_toTopOf="@+id/add_grade_icon"
                    app:layout_constraintBottom_toBottomOf="@id/add_grade_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="@dimen/mainSize"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>

            <Spinner
                    android:id="@+id/add_grade_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/add_grade_text"
                    app:layout_constraintTop_toBottomOf="@+id/add_grade_text"
                    app:layout_constraintEnd_toEndOf="@+id/add_grade_text"
                    android:layout_margin="10dp"
                    android:entries="@array/array_grades">
            </Spinner>

            <ImageView android:id="@+id/add_grade_line"
                       android:layout_width="match_parent"
                       android:layout_height="2dp"
                       android:layout_margin="10dp"
                       android:background="@color/primaryDarkColor"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/add_grade_spinner"/>

            <ImageView android:id="@+id/add_comment_icon"
                       android:layout_width="20dp"
                       android:layout_height="20dp"
                       app:layout_constraintStart_toStartOf="@+id/add_grade_icon"
                       app:layout_constraintTop_toBottomOf="@+id/add_grade_line"
                       android:layout_marginTop="20dp"
                       app:srcCompat="@drawable/comment"/>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_grade_inputlay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/add_comment_icon"
                    app:layout_constraintTop_toBottomOf="@+id/add_grade_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/grade_comment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/comment"
                        android:inputType="textMultiLine"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_edittext"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">

        <ProgressBar android:id="@+id/add_grade_progress"
                android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     app:layout_constraintTop_toTopOf="@+id/add_new_grade"
                     app:layout_constraintBottom_toBottomOf="@id/add_new_grade"
                     app:layout_constraintEnd_toStartOf="@id/add_new_grade"
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/green_progressbar"
                     android:progressTint="@color/primaryDarkColor"
                     android:visibility="invisible"/>

        <Button
                android:id="@+id/add_new_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/primaryDarkColor"
                android:text="@string/add"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>