<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp">

    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:layout_margin="10dp" >

            <ImageView android:id="@+id/grade_subject_icon"
                       android:layout_width="20dp"
                       android:layout_height="20dp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       android:layout_margin="10dp"
                       app:srcCompat="@mipmap/subject"/>

            <TextView
                    android:id="@+id/grade_subject"
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toEndOf="@+id/grade_subject_icon"
                      app:layout_constraintTop_toTopOf="@+id/grade_subject_icon"
                      app:layout_constraintBottom_toBottomOf="@+id/grade_subject_icon"
                      android:layout_margin="10dp"
                      android:textSize="@dimen/mainSize"
                      android:textStyle="bold"/>

            <ImageView android:id="@+id/grade_teacher_icon"
                       android:layout_width="20dp"
                       android:layout_height="20dp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/grade_subject_icon"
                       android:layout_margin="10dp"
                       app:srcCompat="@mipmap/professor"/>

            <TextView android:id="@+id/grade_teacher"
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toEndOf="@+id/grade_teacher_icon"
                      app:layout_constraintTop_toTopOf="@+id/grade_teacher_icon"
                      app:layout_constraintBottom_toBottomOf="@+id/grade_teacher_icon"
                      android:layout_margin="10dp"
                      android:textSize="@dimen/mainSize"/>


            <ImageView android:id="@+id/grade_grade_icon"
                       android:layout_width="20dp"
                       android:layout_height="20dp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       android:layout_margin="10dp"
                       app:srcCompat="@drawable/grade"/>

            <TextView
                    android:id="@+id/grade_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/grade_grade_icon"
                    app:layout_constraintTop_toTopOf="@+id/grade_grade_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/grade_grade_icon"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/mainSize"
                    android:textStyle="bold"/>

            <ImageView android:id="@+id/grade_date_icon"
                       android:layout_width="20dp"
                       android:layout_height="20dp"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/grade_grade_icon"
                       android:layout_margin="10dp"
                       app:srcCompat="@drawable/date"/>

            <TextView android:id="@+id/grade_date"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintEnd_toStartOf="@+id/grade_date_icon"
                      app:layout_constraintTop_toTopOf="@+id/grade_date_icon"
                      app:layout_constraintBottom_toBottomOf="@+id/grade_date_icon"
                      android:layout_margin="10dp"
                      android:textSize="@dimen/mainSize"/>

            <ImageView android:id="@+id/grade_line"
                       android:layout_width="match_parent"
                       android:layout_height="2dp"
                        android:background="@color/primaryLightColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/grade_date_icon"
                        android:layout_margin="10dp"/>


            <ImageView android:id="@+id/grade_comment_icon"
                       android:layout_width="20dp"
                       android:layout_height="20dp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/grade_line"
                       android:layout_margin="10dp"
                       app:srcCompat="@drawable/comment"/>

            <TextView android:id="@+id/grade_comment"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toEndOf="@+id/grade_comment_icon"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/grade_line"
                      android:layout_margin="10dp"
                      android:textStyle="italic"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>